@@ -55,8 +55,6 @@
       android:theme="@style/Theme.Grocy.BottomAppBar"
       android:windowSoftInputMode="adjustPan" />
 
-    <activity android:name=".activity.SettingsActivity" />
-
   </application>
 
 </manifest>
