@@ -701,82 +701,6 @@ public class StockOverviewViewModel extends BaseViewModel {
     updateFilteredStockItems();
   }
 
-  public void toggleDoneStatus(ShoppingListItem listItem) {
-    if (listItem == null) {
-      showErrorMessage();
-      return;
-    }
-    ShoppingListItem shoppingListItem = listItem.getClone();
-
-    if (shoppingListItem.getDoneSynced() == -1) {
-      shoppingListItem.setDoneSynced(shoppingListItem.getDoneInt());
-    }
-
-    shoppingListItem.setDone(shoppingListItem.getDoneInt() == 0 ? 1 : 0);  // toggle state
-
-    if (isOffline()) {
-      updateDoneStatus(shoppingListItem);
-      return;
-    }
-
-    JSONObject body = new JSONObject();
-    try {
-      body.put("done", shoppingListItem.getDoneInt());
-    } catch (JSONException e) {
-      if (debug) {
-        Log.e(TAG, "toggleDoneStatus: " + e);
-      }
-    }
-    dlHelper.editShoppingListItem(
-        shoppingListItem.getId(),
-        body,
-        response -> updateDoneStatus(shoppingListItem),
-        error -> {
-          showMessage(getString(R.string.error_undefined));
-          if (debug) {
-            Log.e(TAG, "toggleDoneStatus: " + error);
-          }
-        }
-    ).perform(dlHelper.getUuid());
-  }
-
-  private void updateDoneStatus(ShoppingListItem shoppingListItem) {
-
-  }
-
-  public void addMissingItems() {
-        /*ShoppingList shoppingList = getSelectedShoppingList();
-        if(shoppingList == null) {
-            showMessage(getString(R.string.error_undefined));
-            return;
-        }
-        JSONObject jsonObject = new JSONObject();
-        try {
-            jsonObject.put("list_id", getSelectedShoppingListId());
-        } catch (JSONException e) {
-            if(debug) Log.e(TAG, "setUpBottomMenu: add missing: " + e);
-        }
-        dlHelper.post(
-                grocyApi.addMissingProducts(),
-                jsonObject,
-                response -> {
-                    showMessage(getApplication().getString(
-                            R.string.msg_added_missing_products,
-                            shoppingList.getName()
-                    ));
-                    downloadData();
-                },
-                error -> {
-                    showMessage(getString(R.string.error_undefined));
-                    if(debug) Log.e(
-                            TAG, "setUpBottomMenu: add missing "
-                                    + shoppingList.getName()
-                                    + ": " + error
-                    );
-                }
-        );*/
-  }
-
   public ArrayList<Integer> getProductIdsMissingStockItems() {
     return new ArrayList<>(productIdsMissingStockItems.keySet());
   }
