@@ -1,4 +1,6 @@
 2.0.0-beta02
+- New: Almost all stock settings are available now (#395)
+- Improved: Debugging settings page was cleaned up
 - Improved: Updated translations
 - Fixed: Crash on startup with some servers (#407)
 
